--- a/The Math/BarView.xib
+++ b/The Math/BarView.xib
@@ -20,7 +20,7 @@
                     </userDefinedRuntimeAttributes>
                 </view>
             </subviews>
-            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+            <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
             <constraints>
                 <constraint firstItem="5Mn-b1-TqJ" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="Nlw-gI-lX4"/>
                 <constraint firstItem="5Mn-b1-TqJ" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="PBT-jZ-Tvs"/>
